# yukari

./: README.md  deny.toml
yukari/: Cargo.toml
yukari-movegen/: Cargo.toml
yukari-movegen/benches/: makemove.rs
yukari-movegen/examples/: perft.rs
yukari-movegen/src/: colour.rs  lib.rs  square.rs
yukari-movegen/src/board/: bitlist.rs  data.rs  eval.rs  mod.rs  piecemask.rs  pins.rs  zobrist.rs
yukari/src/: datagen.rs  lib.rs  main.rs  output.rs  search.rs
yukari/src/engine/: tc.rs
