[package]
name = "yukari-movegen"
version = "0.1.0"
authors = ["Yukari Chess <yukarichess@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.5"
once_cell = "1.4"
colored = "2.2.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"]}

[[bench]]
name = "makemove"
harness = false
