[package]
name = "yukari-movegen"
version = "0.1.0"
authors = ["Yukari Chess <yukarichess@gmail.com>"]
edition = "2021"
license-file = "../LICENSE.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.5"
once_cell = "1.4"
colored = "3.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["real_blackbox"]}

[[bench]]
name = "makemove"
harness = false
